# cdp-bridge

./: .gitignore  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/devtools/cdp/: ICdpBridge.aidl
app/src/main/cpp/: CMakeLists.txt  bridge.c
app/src/main/java/com/devtools/cdi/: CdpClient.kt  TargetDiscovery.kt
app/src/main/java/com/devtools/cdp/: BridgeThread.kt  CdpBridgeService.kt  MainActivity.kt  NativeBridge.kt  RootCdpBridgeService.kt
app/src/main/java/com/devtools/cdp/data/: CdpEvent.kt  DomNode.kt  RemoteObject.kt  TargetInfo.kt
app/src/main/java/com/devtools/cdp/ui/: AppRoot.kt  ApplicationScreen.kt  CdpViewModel.kt  ConsoleScreen.kt  ElementsScreen.kt  NetworkScreen.kt  PerformanceMemorySecurityScreen.kt  SourcesScreen.kt  TargetsScreen.kt  Theme.kt
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: network_security_config.xml
